# Swompi-Runner

./: .gitignore  Dockerfile  README.md  app_specification.md  docker-compose.yml  entrypoint.sh  example.env  example.swompi.yml  nginx.conf  pyproject.toml  template.typ
code/: config.py  database.py  example.env  executor.py  functions.py  main.py  models.py  pyproject.toml  server.py  session.py
diagrams/: Диаграмма взаимодействия компонентов.drawio
garage/: Dockerfile  init-garage.sh  init_config.sh  init_garage.sh
report/: app_specification.md  references.bib  report.typ  template.typ
report/diagrams/: database_structure.txt
src/swompi/: Dockerfile  bot.py  cli.py  config.py  example.env  executor.py  functions.py  init_db.py  main.py  models.py  session.py  storage.py
