[tool.poetry]
name = "Swompy"
version = "0.1.0"
description = ""
authors = ["Your Name you@example.com"]
package-mode = false


[tool.poetry.dependencies]
pyyaml = {version = "^6.0.3", python = "3.10"}
schema = "^0.7.8"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
